[gd_scene load_steps=33 format=3 uid="uid://b4gjkiteju2ea"]

[ext_resource type="Texture2D" uid="uid://4krpsc4cin1j" path="res://Scenes/Entities/EntityAssets/Ribbug Sheet.png" id="1_a34pl"]
[ext_resource type="Script" path="res://Scenes/Entities/RibBug/rib_bug.gd" id="1_g8m6j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y5cku"]
atlas = ExtResource("1_a34pl")
region = Rect2(128, 34, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sokyi"]
atlas = ExtResource("1_a34pl")
region = Rect2(128, 66, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8tue"]
atlas = ExtResource("1_a34pl")
region = Rect2(32, 34, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_25ivh"]
atlas = ExtResource("1_a34pl")
region = Rect2(96, 34, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec4ws"]
atlas = ExtResource("1_a34pl")
region = Rect2(0, 98, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct6jg"]
atlas = ExtResource("1_a34pl")
region = Rect2(32, 98, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4g2t"]
atlas = ExtResource("1_a34pl")
region = Rect2(64, 98, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0nai"]
atlas = ExtResource("1_a34pl")
region = Rect2(96, 98, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50g4c"]
atlas = ExtResource("1_a34pl")
region = Rect2(128, 98, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1yaq"]
atlas = ExtResource("1_a34pl")
region = Rect2(0, 130, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_63pif"]
atlas = ExtResource("1_a34pl")
region = Rect2(32, 130, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68602"]
atlas = ExtResource("1_a34pl")
region = Rect2(64, 130, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wjuj"]
atlas = ExtResource("1_a34pl")
region = Rect2(96, 130, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dyvc"]
atlas = ExtResource("1_a34pl")
region = Rect2(128, 130, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtrmq"]
atlas = ExtResource("1_a34pl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2o3h"]
atlas = ExtResource("1_a34pl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_atfdk"]
atlas = ExtResource("1_a34pl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c1i1"]
atlas = ExtResource("1_a34pl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_66fm6"]
atlas = ExtResource("1_a34pl")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdgl7"]
atlas = ExtResource("1_a34pl")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vawtk"]
atlas = ExtResource("1_a34pl")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33cq8"]
atlas = ExtResource("1_a34pl")
region = Rect2(64, 34, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls61o"]
atlas = ExtResource("1_a34pl")
region = Rect2(32, 66, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu4v7"]
atlas = ExtResource("1_a34pl")
region = Rect2(64, 66, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyhr3"]
atlas = ExtResource("1_a34pl")
region = Rect2(96, 66, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cyva"]
atlas = ExtResource("1_a34pl")
region = Rect2(128, 66, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hhuaa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5cku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sokyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8tue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25ivh")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_ec4ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct6jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4g2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0nai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50g4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1yaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63pif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68602")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wjuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dyvc")
}],
"loop": false,
"name": &"Death ",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtrmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2o3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atfdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c1i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66fm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdgl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vawtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33cq8")
}],
"loop": true,
"name": &"Spawn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls61o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu4v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyhr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cyva")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ovni"]
radius = 3.99961
height = 17.9982

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0unf1"]
radius = 21.0
height = 176.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rbjss"]
radius = 14.3178

[node name="RibBug" type="CharacterBody2D"]
position = Vector2(0, -9)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_g8m6j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_hhuaa")
animation = &"Walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 1)
rotation = 1.55683
shape = SubResource("CapsuleShape2D_4ovni")

[node name="detection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0unf1")

[node name="hit_box" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
shape = SubResource("CircleShape2D_rbjss")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(17, 0)
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-19, 0)
collide_with_areas = true

[node name="take_damage_cooldown" type="Timer" parent="."]

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="hit_box" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="hit_box" to="." method="_on_hit_box_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
